# silly-sprites

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  dependencies.cmake  project_options.cmake  styleguide.md
.github/: CODEOWNERS
.github/workflows/: silly_sprites.yml
cmake/: angelscript_addons.cmake  warnings.cmake
src/: CMakeLists.txt
src/sandbox/: CMakeLists.txt  main.cpp
src/sandboxpurpur/: CMakeLists.txt  main.cpp
src/scrips/: generate_keys.py  generate_mouse.py
src/silly_sprites/: CMakeLists.txt  app_context.hpp  application.cpp  application.hpp  entity.hpp  event_system.cpp  event_system.hpp  events.hpp  game_object.hpp  game_object_and_scene.hpp  input.cpp  input.hpp  native_script.hpp  scene.hpp  scene.inl  script.hpp  silly_sprites.cpp  stopwatch.cpp  stopwatch.hpp  test.as  test.cpp  time.hpp  transform.hpp  types.hpp  utils.cpp  utils.hpp
src/silly_sprites/event/: base_handler.hpp  event_concept.hpp  events.hpp
src/silly_sprites/globals/: app_context.hpp  event_system.hpp  events.hpp  global.hpp
src/silly_sprites/include/: gl_initialize.hpp  silly_sprites.hpp  test.hpp
src/silly_sprites/input/: input.cpp  input.hpp  key.hpp  mouse.hpp
src/silly_sprites/opengl/: buffer_object.cpp  buffer_object.hpp  error.cpp  error.hpp  gl_error.cpp  gl_error.hpp  gl_initialize.cpp  gl_window.cpp  gl_window.hpp  glfw_context.cpp  glfw_context.hpp  initialize.cpp  input.cpp  input.h  input.hpp  key.hpp  keys.hpp  mouse.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  shader_type.cpp  shader_type.hpp  vertex.hpp  window.cpp  window.hpp
src/silly_sprites/script/: builtins.cpp  builtins.hpp  class_info.cpp  class_info.hpp  engine.cpp  engine.hpp  function.hpp  module.cpp  module.hpp  object.hpp  type_info.hpp
tools/: generate_keys.py  generate_mouse.py
